--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+accelerate==1.11.0
 annotated-types==0.7.0
 anyio==4.11.0
+bitsandbytes==0.42.0
 cachetools==6.2.1
 certifi==2025.10.5
 cffi==2.0.0
@@ -9,6 +11,8 @@ cryptography==46.0.3
 deprecation==2.1.0
 distro==1.9.0
 fastapi==0.119.0
+filelock==3.20.0
+fsspec==2025.10.0
 google-ai-generativelanguage==0.6.15
 google-api-core==2.26.0
 google-api-python-client==2.185.0
@@ -20,20 +24,28 @@ grpcio==1.75.1
 grpcio-status==1.71.2
 h11==0.16.0
 h2==4.3.0
+hf-xet==1.2.0
 hpack==4.1.0
 httpcore==1.0.9
 httplib2==0.31.0
 httpx==0.28.1
+huggingface-hub==0.36.0
 hyperframe==6.1.0
 idna==3.11
+Jinja2==3.1.6
 jiter==0.11.0
+MarkupSafe==3.0.3
+mpmath==1.3.0
 multidict==6.7.0
+networkx==3.5
+numpy==2.3.4
 openai==2.4.0
 packaging==25.0
 postgrest==2.22.0
 propcache==0.4.1
 proto-plus==1.26.1
 protobuf==5.29.5
+psutil==7.1.2
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.23
@@ -43,9 +55,15 @@ pydantic_core==2.41.4
 PyJWT==2.10.1
 pyparsing==3.2.5
 python-dotenv==1.1.1
+PyYAML==6.0.3
 realtime==2.22.0
+regex==2025.10.23
 requests==2.32.5
 rsa==4.9.1
+safetensors==0.6.2
+scipy==1.16.3
+sentencepiece==0.2.1
+setuptools==80.9.0
 sniffio==1.3.1
 starlette==0.48.0
 storage3==2.22.0
@@ -53,7 +71,11 @@ StrEnum==0.4.15
 supabase==2.22.0
 supabase-auth==2.22.0
 supabase-functions==2.22.0
+sympy==1.14.0
+tokenizers==0.22.1
+torch==2.9.0
 tqdm==4.67.1
+transformers==4.57.1
 tuya-connector-python==0.1.2
 typing-inspection==0.4.2
 typing_extensions==4.15.0
